# runtime_builder

./: README.md  SConstruct  pyproject.toml  runtime_builder.py  setup.py
examples/chialisp_builder/: README.md  SConstruct  chialisp_builder.py  pyproject.toml
examples/chialisp_example/: SConstruct  pyproject.toml
examples/chialisp_example/chialisp_example/: __init__.py  dynamic_build.py  sha256tree.clsp  shatree.py
examples/chialisp_includes/: SConstruct  pyproject.toml  test.py
examples/chialisp_includes/chialisp_includes/: __init__.py
examples/chialisp_includes/chialisp_includes/clib/: sha256tree.clinc
runtime_builder/: __init__.py  builder.py
tests/: test_builder.py
tests/project_template/: SConstruct  pyproject.toml.template
tests/project_template/proj/: dynamic_build.py  program.source  run_test.py
tests/project_template_enscons/: pyproject.toml.template  test_pip_install.sh  test_pip_install_editable.sh
tests/project_template_enscons/proj/: run_test.py  runtime_build
tests/project_template_setuptools/: README.md  pyproject.toml.template  setup.py  test_pip_install.sh  test_pip_install_editable.sh
tests/two_wheels/: test_pip_install.sh  test_pip_install_editable.sh
tests/two_wheels/a/: pyproject.toml.template  setup.py
tests/two_wheels/a/proj_a/: main_a.py  runtime_build
tests/two_wheels/a/proj_a/next/: runtime_build
tests/two_wheels/b/: pyproject.toml.template  setup.py
tests/two_wheels/b/src/proj_b/: __init__.py  runtime_build
